--- a/index.html
+++ b/index.html
@@ -21,14 +21,16 @@
         <p>Player 2</p>
         <img class="img2" src="./images/dice6.png">
       </div>
+
     </div>
-    <div class="con-btn">
-      <div class="but"><button onclick="reload()">ກາລຸນາສຸ່ມໃໝ່</button>
-    </div>
-  <script src="./index.js"></script>
-  </body>
-  
+<script src="./index.js"></script>
+<div>
+  <div class="con-btn">
+    <div class="but"><button onclick="reload()">ສຸ່ມອີກໃໝ່</button>
   </div>
+</div>
+  </body>
+
   <footer>
     www 🎲 lao2dev 🎲 ltvc🎲edu🎲la
   </footer>
